<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BurnIn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="on_period">On Period (sec)</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="count">Count</string>
    <string name="delete_log_file">Delete Log File</string>
    <string name="start">Start</string>
    <string name="start_back">Start with back preview</string>
    <string name="start_front">Start with front preview</string>
    <string name="stop">Stop</string>
    <string name="after_boot">After Boot</string>
    <string name="before_reboot">Before Reboot</string>
    <string name="free_memory">Free Memory</string>
    <string name="wwan_signal_strength">WWAN Signal Strength</string>
    <string name="wifi_signal_strength">Wifi Signal Strength</string>
    <string name="ping_ip">"Ping to IP: "</string>
    <string name="timeout">"Timeout (sec): "</string>
    <string name="bluetooth_device_timeout">"Bluetooth Device Timeout (sec): "</string>
    <string name="output">Output</string>
    <string name="Recheck">Recheck</string>
    <string name="OK">OK</string>
    <string name="Scan">Scan</string>
    <string name="TestInfo">Test Info</string>
    <string name="Stop">Stop</string>
    <string name="error_info">Error to get the permission</string>
    
</resources>
